do not fix header on mobile landing

--- a/kifi-backend/modules/shoebox/public/css/landing-mobile.less
+++ b/kifi-backend/modules/shoebox/public/css/landing-mobile.less
@@ -31,23 +31,13 @@
 	font-weight: @phfw;
 }
 
-body {
-	padding-top: 60px;
-}
-
 .kifi-header {
-	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
 	font-size: 0;
 	padding: 13.5px 29px;
 	background-color: white;
 	z-index: 10;
-
-	html.scroll & {
-		.box-shadow(0 0 3px 0 rgba(0,0,0,0.15));
-	}
+	.box-sizing(border-box);
 }
 
 .clear {
